<resources>
    <string name="app_name">Mod Store</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="btn_cart_desc">Cart</string>
    <string name="btn_search_desc">Search</string>
    <string name="about_names">Manuel - Omar - Daniel</string>
    <string name="title_login">Log In</string>
    <string name="title_register">Register</string>
    <string name="btn_created_account">Create acocunt</string>
    <string name="error_cart">Must Be Log In to Access Cart</string>
    <string name="cart_tv">My Cart</string>
    <string name="cart_btn">Proceed to Checkout</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="error_search">To Value is Smaller than From Value</string>
    <string name="error_empty_search">Search Field is Empty</string>
    <string name="cart_pd">Fetching Cart</string>
    <string name="prodlist_tv">Results:</string>
	<string name="prodlist_pd">Fetching Products</string>
    <string name="catlist_tv">Main Categories:</string>
    <string name="nocat_found">No Categories Where Loaded</string>
    <string name="catlist_pd_msg">Loading Categories&#8230;</string>
    <string name="catrow_desc">Left Arrow</string>
    <string name="mainfrag_welcome">Welcome, Guest</string>
    <string name="mainfrag_sbd">Shop By\nDepartment</string>
    <string name="mainfrag_search">Search</string>
    <string name="mainfrag_whathot">What\'s Hot</string>
    <string name="whrow_index">0.</string>
    <string name="drawer_open_desc">Main menu opened</string>
    <string name="drawer_close_desc">Main menu closed</string>
    <string name="btn_category_str">Categories</string>
    <string name="searchbar_title">Search Producst</string>
    <string name="add_creditcard">Add Credit Card</string>
    <string name="cc_name">Full name:</string>
    <string name="cc_number">Number:</string>
    <string name="cc_expire">Expire:</string>
    <string name="addr_address">Address:</string>
    <string name="addr_zipcode">Zipcode:</string>
    <string name="addr_city">City:</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="about_logo_description">Mod Store Logo</string>
    <string name="about_description">This is Pure Android, Bitch!</string>
    <string name="login_show">Show</string>
    <string name="login_str">Log In</string>
    <string name="register_str">Register</string>
    <string name="no_data_label">No Data</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_error">Error in Username or Password, Please Try Again</string>
    <string name="forgot_dialog_title">Forgot?</string>
    <string-array name="forgot_dialog_values">
        <item>Email</item>
        <item>Password</item>
    </string-array>
    <string name="register_title">Setup Account</string>
    <string name="register_instructions">You can create your account in just a few steps:</string>
    <string name="register_username">Username:</string>
    <string name="register_password">Password:</string>
    <string name="register_pw_confirm">Confirm Password:</string>
    <string name="register_email">Email:</string>
    <string name="register_fn">First Name:</string>
    <string name="register_ln">Last Name:</string>
    <string name="logging_message">Logging in&#8230;</string>
    <string name="forgot_title">Forgot Something?</string>
    <string name="forgot_message">If you forgotten your password or username, please enter your account’s email.</string>
    <string name="forgot_send">Send</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="hint_ccnumber">Credit Card Number</string>
    <string name="hint_ccfullname">Full Name</string>
    <string name="hint_ccv">CCV</string>
    <string name="hint_ccmonth">Month</string>
    <string name="btn_filters">Filters</string>
    <string name="hint_ccdefault">Default?</string>
    <string name="hint_addrline1">Address Line 1</string>
    <string name="hint_addrline2">Address Line 2</string>
    <string name="hint_addrcity">City</string>
    <string name="hint_addrstate">State</string>
    <string name="hint_addrzipcode">Zip Code</string>
    <string name="search_filter_title">Refine Search</string>
    <string name="search_filter_cancel">Cancel</string>
    <string name="search_filter_sort">Sort</string>
    <string name="search_filter_categories">Categories</string>
    <string name="search_filter_rating">Rating</string>
    <string name="search_filter_condition">Condition</string>
    <string name="search_filter_price">Price</string>
    <string name="search_filter_to">To</string>
    <string name="search_filter_start_hint">$0.00</string>
    <string name="search_filter_end_hint">Any</string>
    <string name="search_filter_error_price">Error in Price Order</string>
    <string name="placeholder_search_desc">Placeholder Search Icon</string>
    <string name="search_progress_msg">Searching…</string>
    <string name="search_error">Unable to complete search. Please try again.</string>
    <string name="new_password">New Password&#8230;</string>
    <string name="new_password_confirm">Confirm New Password&#8230;</string>
    <string name="hint_ccyear">Year</string>
    <string name="category_list_title">Select a category</string>
    <string name="placeholder_category_desc">Placeholder List Icon</string>
    <string name="category_list_error">Unable to generate list. Please try again.</string>
    <string name="category_list_placeholder_text">Placeholder Category</string>
    <string name="category_list_row_desc">Image of Right Arrow</string>
    <string name="cc_image_desc">Image of Credit Card</string>
    <string name="hint_productname">Name</string>
    <string name="hint_productdescription">Description</string>
    <string name="hint_productbrand">Brand</string>
    <string name="hint_productmodel">Model</string>
    <string name="hint_productdimensions">Dimensions</string>
    <string name="hint_productquantity">Quantity</string>
    <string name="hint_productbuyoutprice">Buyout Price</string>
    <string name="hint_productbidprice">Bid Price</string>
    <string name="hint_productendauction">Auction Ends</string>
    <string name="product_selectphoto">Select a Photo</string>
    <string name="product_sellit">Sell It!</string>
    <string name="product_updateit">Update It!</string>
    <string name="product_list_placeholder_desc">Placeholder for Product List</string>
    <string name="product_list_best_match">Best Seller in</string>
    <string name="label_endingon">Auction Ending On:</string>
    <string name="label_endedon">Auction Ended On:</string>
    <string name="label_maxbid">Bid:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="cart_dismiss_btn_desc">Cart Button Dismiss</string>
    <string name="cart_text_title">Cart</string>
    <string name="cart_continue_shopping_text">Continue Shipping</string>
    <string name="cart_empty_string">Your cart is empty.</string>
    <string name="cart_checkout_btn_text">Checkout</string>
    <string name="label_shippingaddress">Shipping Address:</string>
    <string name="label_trackingnum">Tracking Number:</string>
    <string name="btn_submittracking">Update</string>
    <string name="dialog_err_wifi_title">Error</string>
    <string name="dialog_err_wifi_desc">No Data Connection Found. Please Try again</string>
    <string name="dialog_err_wifi_cancel">Cancel</string>
    <string name="dialog_err_wifi_tryagain">Try Again</string>
    <string name="errmsg_no_connection">No Connection</string>
    <string name="errmsg_bad_json">Bad JSON parsing&#8230;</string>
    <string name="errmsg_cat_notloaded"></string>
    <string name="pd_mactivity">Loading App</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <string name="title_myorders">My Orders</string>
    <string name="sec_title_selling">Selling</string>
    <string name="sec_title_buying">Bidding</string>
    <string name="sec_tittle_orders">Orders</string>
    <string name="sec_title_rating">Rating</string>
    <string name="orders_title">Orders</string>
    <string name="orders_number">Order # ******</string>
    <string name="orders_total">Total: $0.00</string>
    <string name="orders_quantity">Quantity: 0</string>
    <string name="orders_date">Date: 1/1/1900</string>
    <string name="listbuy_bidding">Currently Bidding</string>
    <string name="listbuysell_no_item">No Items</string>
    <string name="listbuysell_load">Loading&#8230;</string>
    <string name="listbuy_nwin">Didn\'t Win</string>
    <string name="listsell_active">Active</string>
    <string name="listsell_sold">Sold</string>
    <string name="listsell_notsold">Not Sold</string>
    <string name="listbuysellrow_img_desc">Image of Item</string>
    <string name="listbuysellrow_title">No Title</string>
    <string name="listbuysellrow_price">$0.00</string>
    <string name="listbuysellrow_type">Trans. Type</string>
    <string name="listbuysellrow_date">1/1/1900</string>
    <string name="listbuysellrow_date_title">End Date:</string>
    <string name="listbuysellrow_quantity">Quantity: 0</string>
    <string name="listbuysellrow_tracking">N/A</string>
    <string name="mod_names">Manuel-Omar-Daniel</string>
    <string name="about_img_desc">About Image</string>
    <string name="title_activity_log_in_register">LogInRegisterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="setting_title_basic_info">Basic Information</string>
    <string name="setting_title_cc">Credit Card</string>
    <string name="setting_title_addr">Addresses</string>
    <string name="title_myorder">Order</string>
    <string name="title_item">Items</string>
    <string name="title_ordernum">Order #</string>
    <string name="texbox_orderdate">Date: </string>
    <string name="textbox_ordertotal">Total: </string>
    <string name="textbox_ordershipto">Ship To:</string>
    <string name="textbox_orderaddress">*****</string>
    <string name="textbox_ordertrackingtitle">Tracking #:</string>
    <string name="textbox_ordertrackingnum">N/A</string>
    <string name="textbox_orderpaymenttitle">Payment Information:</string>
    <string name="textbox_orderccnum">*****</string>
    <string name="textbox_orderbillingaddrtitle">Billing Address:</string>
    <string name="title_activity_product_viewer">ProductViewerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_sellitem">Sell Item</string>
    <string name="noitem_found">No Product Found</string>
    <string name="will_have_auction">Is an Auction?</string>
    <string name="title_activity_selling_viewer_acitivity">Selling</string>
    <string name="sellview_product">Product</string>
    <string name="sellview_history">History</string>
    <string name="sellview_edit">Edit</string>
    <string name="title_mystore">My Store</string>
    <string name="title_myacc">My Account</string>
    <string name="mystore_myrating">My Rating</string>
    <string name="close">Close</string>
    <string name="cart_total">Total:</string>
    <string name="cart_total_placeholder">$#.##</string>
    <string name="cart_checkout_payment">Payment Option:</string>
    <string name="cart_checkout_address">Shipping Address:</string>
    <string name="cart_checkout_buy">Commit to Buy</string>
    <string name="cart_checkout_cancel">Cancel</string>
    <string name="cart_checkout_title">Checkout</string>
    <string name="cart_checkout_finish">Comete to Buy</string>
    <string name="cart_checkout_complete_order">Completing Order&#8230;</string>
    <string name="cart_checkout_no_address">Add Shipping Address</string>
</resources>